tests/reference/asr-intent1-4eee5ff.stderr
semantic error: Argument `y` with INTENT(IN) in variable definition context (assignment)
 --> tests/errors/intent1.f90:9:5
  |
9 |     y = 99  
  |     ^ 
